fix: merge api portal

--- a/src/frontend/src/assets/i18n/zh-Hans.json
+++ b/src/frontend/src/assets/i18n/zh-Hans.json
@@ -260,6 +260,9 @@
     "ALTERMANATER": "告警管理",
     "SKYWALKING": "性能分析",
     "KUBEVIEW": "平台概览",
+    "DEVELOPER": "服务框架",
+    "PUBLISHER": "API发布",
+    "STORE": "API商店",
     "NAMESPACE": "命名空间",
     "NAME_SPACE_LIST": "命名空间列表",
     "NODE": "主机",
